# FineTune-LLM-OnlineRL

./: .gitignore  AGENTS.md  CLAUDE.md  FSDP.py  LLM_RL_agent.py  LLM_RL_agent_FSDP.py  LLM_RL_agent_FSDP_v2.py  README.md  RL_Project.ipynb  chinese_chess_episode_metrics.csv  chinese_chess_episode_metrics_v2.csv  chinese_chess_episode_metrics_v2.csv.bak.2026-05-29  chinese_chess_llm_output_log  claude_plays.py  model_state_dict.pt  pikafish_eval.py  play_games.py  pyproject.toml  requirements.txt  xiangqi_labels.py  xiangqi_v2_run_heartbeat.json
.claude/: settings.json
.cursor/: hooks.json
.cursor/hooks/: agent_handoff_stop.py
.cursor/rules/: agent-handoff.mdc
archive/: LLM_RL_agent.py
data/logs/: chinese_chess_token_truncate_log
data/metrics/: chinese_chess_episode_metrics_v2.csv.bak
data/xiangqi_sft/: README.md  xiangqi_sft_eval_holdout.jsonl  xiangqi_sft_smoke.jsonl
docs/: AGENT_TODO.md  ARCHITECTURE.md  XIANGQI_R1_METRICS.md
docs/logs/: 2026-04-19-log-initial-setup.md  2026-05-11-log-legal-move-sampler.md  2026-05-13-log-llm-chess-xiangqi-elo-bench.md  2026-05-13-log-xiangqi-r1-sft-rebuild.md  2026-05-14-log-greedy-action-selection.md  2026-05-14-log-grpo-backward-sft-adapter.md  2026-05-14-log-stdout-episode-scoreboard.md  2026-05-15-log-grpo-optimizer-and-curriculum-tuning.md  2026-05-15-log-resume-from-ep5-engine-best-csv.md  2026-05-17-log-combined-reward-and-optimizer-resume.md  2026-05-20-log-pikafish-reliability-and-gate-restart.md  2026-05-21-log-self-play-and-asymmetric-truncation.md  2026-05-22-log-engine-policy-distillation.md  2026-05-25-log-terminal-win-grpo-update.md  2026-05-26-log-engine-align-double-backward-fix.md  2026-05-26-log-ep23-sequential-oom-fallback.md  2026-05-26-log-long-run-grpo-analysis-and-resume-plan.md  2026-05-27-log-enemy-era-metrics-and-oom-backward-fix.md  2026-05-28-log-xiangqi-web-play-ui.md  2026-05-29-log-engine-align-sequential-backward.md  2026-05-29-log-move-only-training.md  2026-05-29-log-self-play-enemy-pikafish-mask.md  2026-05-29-log-sft-ref-kl-and-engine-align.md  2026-07-01-log-cursor-agent-harness.md  2026-07-02-log-claude-code-migration.md  2026-07-02-log-muzero-implementation.md  2026-07-02-log-muzero-spec10-cheap-diagnostics.md  2026-07-02-log-muzero-xiangqi-design.md  2026-07-03-log-latest-selfplay-mode.md  2026-07-03-log-simsiam-collapse-fix.md  2026-07-03-log-warmstart-perft-timeout.md  2026-07-04-log-training-health-metrics.md  2026-07-05-log-color-canonicalization.md  2026-07-05-log-metrics-audit-and-buffer-fix.md  2026-07-06-log-muzero-web-play.md  2026-07-07-log-greedy-rung-and-elo-arena.md  2026-07-08-log-shaping-weight-cut.md  2026-07-10-log-truncation-patience.md  2026-07-13-log-node-limited-pika-rung.md  2026-07-14-log-engine-game-seeding.md  (+1 more)
muzero/: arena.py  config.py  diagnose_consistency.py  encoding.py  env.py  gate_opponents.py  mcts.py  metrics.py  network.py  replay_buffer.py  selfplay.py  train.py  transforms.py  warmstart.py
muzero/tests/: helpers.py  test_arena.py  test_config.py  test_encoding.py  test_env.py  test_env_adjudication.py  test_gate_opponents.py  test_mcts.py  test_metrics.py  test_network.py  test_pikafish_read_lines.py  test_replay_buffer.py  test_selfplay.py  test_train.py  (+2 more)
scripts/: analyze_enemy_eras.py  build_xiangqi_sft_dataset.py  claude_plays.py  download_xiangqi_pgn.py  eval_xiangqi_metrics.py  play_games.py  serve_xiangqi_play.py  test_play_api.py  train_sft_xiangqi.py  xiangqi_pgn.py  xiangqi_selfplay.py
src/: pikafish_eval.py  xiangqi_board.py
unsloth_compiled_cache/: UnslothDPOTrainer.py  UnslothGRPOTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py
web/: README.md
(+45 files in other folders)
