[project]
name = "finetune-llm-onlinerl"
version = "0.1.0"
description = "Fine-tune LLMs with online RL (GRPO) for Chinese Chess via FSDP"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Core ML
    "torch==2.10.0",
    # Unsloth (PyPI) supports transformers 4.51–4.57, not 5.x
    "transformers==4.57.2",
    "peft==0.18.1",
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "trl==0.29.0",
    "datasets==4.7.0",
    # RL environments
    "setuptools>=69.5.1,<82",  # pkg_resources (gym-xiangqi; removed in setuptools 82+)
    "gym==0.26.2",
    "gym-xiangqi==0.5.0",
    "gymnasium==0.29.1",
    "pygame==2.6.1",
    # Text adventure RL (notebook experiments)
    "textworld==1.7.0",
    "jericho==3.3.1",
    "llamagym==0.1.1",
    "spacy==3.8.11",
    # Logging & visualization
    "wandb==0.16.6",
    "matplotlib==3.10.8",
    "tqdm==4.67.3",
    # Data & science
    "numpy==1.26.4",
    "pandas==3.0.1",
    "scipy==1.17.1",
    # Xiangqi PGN/FEN parsing (Xiangqi-R1 paper §3.1 uses this library to transform PGN → FEN)
    "cchess>=1.25",
    # Western chess board / UCI engine adapter (used by scripts/benchmark/)
    "chess>=1.10,<2",
    # Notebook support
    "ipykernel==7.2.0",
    "ipython==9.11.0",
    # HuggingFace hub (notebook login)
    "huggingface_hub==0.36.2",
    "unsloth>=2025.11.1",
]

[tool.uv]
# llamagym 0.1.1 has tight upper bounds that conflict with our newer versions;
# override to match what pip installed successfully
override-dependencies = [
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "peft==0.18.1",
    "transformers==4.57.2",
    "trl==0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.10",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.ruff]
# Generated / runtime artifacts — not project source (AGENTS.md: ruff check .)
extend-exclude = [
    "unsloth_compiled_cache",
    "wandb",
    "checkpoints",
    "*.ipynb",
]

[tool.ruff.lint.per-file-ignores]
# PEFT monkeypatch must run before torch.distributed imports (see file header).
"LLM_RL_agent_FSDP.py" = ["E402"]
# Scripts prepend repo root to sys.path before third-party imports.
"scripts/*.py" = ["E402"]
"scripts/**/*.py" = ["E402"]
"web/**/*.py" = ["E402"]
